todo的所有内容已经ok了。就剩下研究怎么进行自动化测试了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,16 @@
         <activity
             android:name=".statistics.StatisticsActivity"
             android:label="@string/title_activity_statistics"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".tasks.TasksActivity"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".tasks.TasksActivity" />
+
+        </activity>
+        <activity android:name=".taskdetail.TaskDetailActivity" />
+        <activity android:name=".addedittask.AddEditTaskActivity"></activity>
     </application>
 
 </manifest>
